fixed question container overflow and alignment

--- a/public/stylesheets/question.css
+++ b/public/stylesheets/question.css
@@ -48,11 +48,9 @@ body {
 }
 .question-list{
     display: flex;
-    /* height: fit-content;
-    width: fit-content; */
     height: 100vh;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -97,7 +95,8 @@ body {
     padding: 10px;
     background-color: white;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-    height: 40%;
+    height: fit-content;
+    overflow-wrap: break-word;
     width: 40%;
     margin: 10px;
     border-radius: 3px;
